--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
-    "react/no-unescaped-entities": "off"
+    "@typescript-eslint/no-base-to-string": "off",
+    "react/no-unescaped-entities": "off",
+    "max-lines-per-function": "off",
+    "header/header": "off"
   }
 }
